--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#d1d0df",
-    "activityBar.background": "#d1d0df",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#a57d7a",
-    "activityBarBadge.foreground": "#15202b",
-    "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#d1d0df",
-    "statusBar.background": "#b4b2ca",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#9794b5",
-    "statusBarItem.remoteBackground": "#b4b2ca",
-    "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#b4b2ca",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#b4b2ca99",
-    "titleBar.inactiveForeground": "#15202b99"
+    "activityBar.activeBackground": "#2242af",
+    "activityBar.background": "#2242af",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#db4466",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#2242af",
+    "statusBar.background": "#1a3284",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#2242af",
+    "statusBarItem.remoteBackground": "#1a3284",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#1a3284",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#1a328499",
+    "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#b4b2ca"
+  "peacock.color": "#1a3284"
 }
